# sesamviewer

./: ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h.in  config.status.lineno  configure.in  intltool-merge  intltool-update
autom4te.cache/: output.0  requests  traces.0
data/: Makefile.am  Makefile.in  b2.xml  noemie-ps.xml  sesam_viewer.xpm
glade/: Makefile.am  Makefile.in  goto.glade  main.glade  properties.glade
include/: about_window.h  b2.h  config_file.h  constants.h  declare.h  detail_window.h  error.h  error_window.h  goto_window.h  main_window.h  menu.h  noemie.h  open_window.h  properties_window.h  sesam.h  spawn.h  support.h
po/: Makefile  Makefile.in  POTFILES  POTFILES.in
src/: Makefile.am  Makefile.in  about_window.c  b2.c  config_file.c  detail_window.c  error.c  error_window.c  goto_window.c  main.c  main_window.c  noemie.c  open_window.c  properties_window.c  spawn.c  support.c
